# Lighthouse

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.d14b01b  DNCommon.pri  DenovoViewer.pro  README.md  aquagraph.cpp  aquagraph.h  dnapplication.cpp  dnapplication.h  main.cpp
DenovoUI/: CMakeLists.txt  DenovoUI.qmlproject  DenovoUI.qmlproject.qtds  DenovoUI.qmlproject.qtds.08a1911  DenovoUI.qmlproject.qtds.a3a4bf6  DenovoUI.qrc  main.qml  qmlmodules
DenovoUI/content/: App.qml  Screen01.ui.qml
DenovoUI/imports/: CMakeLists.txt
DenovoUI/imports/DenovoUI/: AlarmSettings.qml  AlarmSettings.qml.autosave.KzoZVo  BatteryBar.qml  BoatGaugePanel.qml  BoatStatusPanel.qml  CMakeLists.txt  CentralView.qml  CheckList.qml  Constants.qml  ControlMenu.qml  ControlView.qml  DNButton.qml  DNValueEdit.qml  DataPanel.qml  DenovoBind.qml  DeviceControl.qml  HUD.qml  MenuButton.ui.qml  MultiBoatPanel.qml  PumpControl.qml  SlidingScale.qml  StatusBar.qml  StatusView.qml  TestButton.ui.qml  ValueBar.qml  VideoControl.qml  VideoView.qml  WinchControl.qml  qmldir
DenovoUI/imports/DenovoUI/designer/: plugin.metainfo
DenovoUI/src/: import_qml_plugins.h
cmake/: CreateWinInstaller.cmake  GstStaticFix.cmake
cmake/find-modules/: FindGStreamer.cmake
deploy/windows/: QGroundControl.rc  nullsoft_installer.nsi
dnapi/: BoatManagerUI.qml  BoatStatusView.qml  CMakeLists.txt  DNCommon.pri  DeNovo.qrc  QtQml.pri  aquagraph.cpp  aquagraph.h  arcgisnetworkmanager.cpp  arcgisnetworkmanager.h  boatitem.cpp  boatitem.h  boatmanager.cpp  boatmanager.h  configmanager.cpp  configmanager.h  controlitem.cpp  controlitem.h  controlmanager.cpp  controlmanager.h  datagraph.cpp  datagraph.h  dncontrol.cpp  dncontrol.h  dncore.cpp  dncore.h  dnmetadata.cpp  dnmetadata.h  dnqmlglobal.cpp  dnqmlglobal.h  dnvalue.cpp  dnvalue.h  dnvideomanager.cpp  dnvideomanager.h  heartbeat.cpp  heartbeat.h  loghttpclient.cpp  loghttpclient.h  main.qml  main2.qml  (+25 more)
dnapi/Android/: AndroidInit.cc  AndroidInterface.cc  AndroidSerial.cc  CMakeLists.txt
dnapi/Android/qtandroidserialport/: qserialport_android.cpp  qserialportinfo_android.cpp
dnapi/GStreamer/: CMakeLists.txt  GStreamer.cc  GStreamer.h  android_gst_init.cc
dnapi/LinkPackage/: Bridge.cpp  Bridge.h  CMakeLists.txt  LinkInterface.cpp  LinkInterface.h  LinkManager.cpp  LinkManager.h  MAVLinkProtocol.cpp  QGCSerialPortInfo.cc  QGCSerialPortInfo.h  SerialLink.cc  SerialLink.h  UDPLink.cc  UDPLink.h  USBBoardInfo.json
dnapi/libs/qmlglsink/gst-plugins-good/ext/build-qmlglsink-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
dnapi/libs/qmlglsink/gst-plugins-good/ext/build-qmlglsink-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
dnapi/libs/qmlglsink/gst-plugins-good/ext/build-qmlglsink-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QColor.0D15DCD5E06340E3.idx  QEvent.2E7271006C46CA08.idx  QGuiApplication.BFAEF9B9283659DF.idx  QList.A41E05315895CAC9.idx  QMargins.91CE6CF253142468.idx  QMatrix4x4.D3978512ACC0C23A.idx  QMutex.541CE5CEDFD8F56A.idx  QMutexLocker.37C6F1800FB9CE3C.idx  QObject.378BD53694746BCE.idx  QOpenGLContext.B9B065434F7FD08A.idx  QOpenGLFunctions.DD5F6D07E0781BE3.idx  QPointer.FD910C3418ADF059.idx  QQmlApplicationEngine.C214D913FDB70F27.idx  QQuickItem.B1D2CA980996E7AF.idx  QQuickWindow.7810646E6F945EEA.idx  QRect.5CA795E97939797B.idx  QRectF.1C3B6A6D0A0FC073.idx  QRunnable.4D073A65EE2E8C57.idx  QSGSimpleTextureNode.45837D32C78F4DCC.idx  QSGTexture.A7AB1B011A784CBB.idx  QSGTextureProvider.6A44FFCD437DF7B0.idx  QSize.FC5DED1CCB53D648.idx  QSizeF.AEA31B8CE35858C6.idx  QSurfaceFormat.C4E0283095D69E65.idx  QTransform.95930C32973D8D68.idx  QVariant.CB6956AA89C0F0C2.idx  QtConstructorMacros.F29E2E53E5C20682.idx  __msvc_chrono.hpp.A3BEE854AF43D0FB.idx  all_functions.h.FF92C2306D932061.idx  array.4633C8654156FCF9.idx  base-prelude.h.C4D4C48E08F9F6A1.idx  base.h.6B8745FCEF92C0C8.idx  basetsd.h.3F4874139DB0EEA7.idx  blending.h.848AE97B435EAF2D.idx  buffers.h.054CE8EDCBFC32AC.idx  cguid.h.4ACC48559336089C.idx  colorbalance.h.F6B3851BC55ECBF5.idx  colorbalancechannel.h.0AEE0ADBDC2B9A91.idx  combaseapi.h.9653EF99EF4687EF.idx  coml2api.h.2D81D4E7A277F2D7.idx  (+552 more)
dnapi/libs/qmlglsink/gst-plugins-good/ext/build-qmlglsink-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/debug/: gstqmlgl.exp  gstqmlgl.ilk  gstqmlgl.lib  moc_gstqsg6glnode.cpp  moc_qt6glitem.cpp
dnapi/libs/qmlglsink/gst-plugins-good/ext/qt6/: qmlglsink.pro
dnapi/res/: SensorType.xml
dnapi/ui/: AquaDataGraph.qml  AquaUI.qml  BoatManagerUI.qml  BoatSetting.qml  BoatStatusView.qml  CenterVideoView.qml  ControlMenu.qml  ControlView.qml  DNButton.qml  DNFlyView.qml  DNIconButton.qml  DNPopup.qml  DNSquareButton.qml  DNValueEdit.qml  DNVideoView.qml  DataPanel.qml  DatabaseControl.qml  DeviceControl.qml  EditBoatDialog.qml  HUD.qml  MapView.qml  PipState.qml  PipView.qml  PipView2.qml  PumpControl.qml  QuickTab.qml  RightTool.qml  SlidingScale.qml  SubVideoView.qml  SystemOverviewPanel.qml  VideoSetting.qml  VideoView.qml  WinchControl.qml
dnapi/ui/DeNovoViewer/Control/: qmldir
dnapi/ui/DeNovoViewer/Display/: qmldir
gstqml6gl/: CMakeLists.txt
website/: db_viewer.html  seagrass.html
